apps/services/vulfminio/ingress-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: ingress
  namespace: vulfminio
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`minio.vulf.haus`)
    services:
    - name: vulfminio-console
      port: 9090
  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
