apps/services/vulfminio/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.vulf.haus`)
      kind: Rule
      services:
        - name: vulfminio-console
          port: 9090

  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.vulf.haus`)
      kind: Rule
      services:
        - name: minio
          port: 80

  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
