apps/services/vulfminio/s3-ingress-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: s3-ingress
  namespace: vulfminio
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`s3.vulf.haus`)
    services:
    - name: minio
      port: 80
  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
